Add - un Videotutorial de jQuery

--- a/01-manual-jquery/09-primeros-pasos-jquery.html
+++ b/01-manual-jquery/09-primeros-pasos-jquery.html
@@ -20,7 +20,7 @@
         <a href="https://www.desarrolloweb.com"> Ir a DesarrolloWeb.com </a>
     </p>
 
-    <script src="./jquery-3.7.1.min.js"> </script>
+    <script src="../assets/jquery/core/jquery-3.7.1.min.js"> </script>
     
     <script>
         
