--- a/01-manual-jquery/03-cuando-usar-jquery/05-recorrer-parrafos.html
+++ b/01-manual-jquery/03-cuando-usar-jquery/05-recorrer-parrafos.html
@@ -1,6 +1,7 @@
 <!--  --------------------------------------------------  -->
 <!--  ----------  /jquery-desarrolloweb.com/  ----------  -->
 <!--  ----------  /01-manual-jquery/  ------------------  -->
+<!--  ----------  /03-cuando-usar-jquery/  -------------  -->
 <!--  ----------  /05-recorrer-parrafos.html  ----------  -->
 <!--  --------------------------------------------------  -->
 
@@ -12,7 +13,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Recorrer párrafos </title>
+    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <title> 5 - Recorrer párrafos </title>
     
     <style>
         
