--- a/01-manual-jquery/03-cuando-usar-jquery/06-acceso-api.html
+++ b/01-manual-jquery/03-cuando-usar-jquery/06-acceso-api.html
@@ -1,6 +1,7 @@
 <!--  --------------------------------------------------  -->
 <!--  ----------  /jquery-desarrolloweb.com/  ----------  -->
 <!--  ----------  /01-manual-jquery/  ------------------  -->
+<!--  ----------  /03-cuando-usar-jquery/  -------------  -->
 <!--  ----------  /06-acceso-api.html  -----------------  -->
 <!--  --------------------------------------------------  -->
 
@@ -11,7 +12,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Acceso a API </title>
+    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <title> 6 - Acceso a API </title>
 </head>
 
 <body>
