--- a/01-manual-jquery/03-cuando-usar-jquery/04-document-ready.html
+++ b/01-manual-jquery/03-cuando-usar-jquery/04-document-ready.html
@@ -1,6 +1,7 @@
 <!--  --------------------------------------------------  -->
 <!--  ----------  /jquery-desarrolloweb.com/  ----------  -->
 <!--  ----------  /01-manual-jquery/  ------------------  -->
+<!--  ----------  /03-cuando-usar-jquery/  -------------  -->
 <!--  ----------  /04-document-ready.html  -------------  -->
 <!--  --------------------------------------------------  -->
 
@@ -10,7 +11,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> document ready </title>
+    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <title> 4 - document ready </title>
 </head>
 
 <body>
