--- a/01-manual-jquery/03-cuando-usar-jquery/08-recuperar-mostrar-datos-jquery.html
+++ b/01-manual-jquery/03-cuando-usar-jquery/08-recuperar-mostrar-datos-jquery.html
@@ -1,6 +1,7 @@
 <!--  ---------------------------------------------------------------  -->
 <!--  ----------  /jquery-desarrolloweb.com/  -----------------------  -->
 <!--  ----------  /01-manual-jquery/  -------------------------------  -->
+<!--  ----------  /03-cuando-usar-jquery/  --------------------------  -->
 <!--  ----------  /08-recuperar-mostrar-datos-jquery.html  ----------  -->
 <!--  ---------------------------------------------------------------  -->
 
@@ -11,7 +12,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Recuperar datos y mostrarlos - jQuery </title>
+    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <title> 8 - Recuperar datos y mostrarlos - jQuery </title>
     
     <style>
         section {
