--- a/01-manual-jquery/05-añadir-quitar-clases/10-añadir-quitar-clases.html
+++ b/01-manual-jquery/05-añadir-quitar-clases/10-añadir-quitar-clases.html
@@ -1,6 +1,7 @@
 <!--  -----------------------------------------------------  -->
 <!--  ----------  /jquery-desarrolloweb.com/  -------------  -->
 <!--  ----------  /01-manual-jquery/  ---------------------  -->
+<!--  ----------  /05-añadir-quitar-clases/  --------------  -->
 <!--  ----------  /10-añadir-quitar-clases.html  ----------  -->
 <!--  -----------------------------------------------------  -->
 
@@ -12,7 +13,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Añadir y quitar clases cuando se producen eventos de usuario </title>
+    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <title> 10 - Añadir y quitar clases cuando se producen eventos de usuario </title>
 
     <style>
         .clasecss {
@@ -32,7 +34,7 @@
 
     <br> <br>
 
-    <a href="https://desarrolloweb.com">Añadir y quitar clase en la capa de arriba </a>
+    <a href="https://desarrolloweb.com"> Añadir y quitar clase en la capa de arriba </a>
 
     <script src="../assets/jquery/core/jquery-3.7.1.min.js"> </script>
 
