Add - Core de jQuery de Manuales y Videotutoriales.

--- a/02-videotutoriales-jquery/05-probando-jquery/index.html
+++ b/02-videotutoriales-jquery/05-probando-jquery/index.html
@@ -1,7 +1,8 @@
 <!--  ---------------------------------------------------  -->
 <!--  ----------  /jquery-desarrolloweb.com/  -----------  -->
 <!--  ----------  /02-videotutoriales-jquery/  ----------  -->
-<!--  ----------  /01-probando-jquery.html  -------------  -->
+<!--  ----------  /05-probando-jquery/  ------------------  -->
+<!--  ----------  /index.html  ---------------------------  -->
 <!--  ---------------------------------------------------  -->
 
 
@@ -11,7 +12,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Probando jQuery - Videotutoriales </title>
+    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <title> 5 - Probando jQuery - Videotutoriales </title>
 
     <script src="../assets/jquery/core/jquery-3.7.1.min.js"> </script>
 
