Change - Comentarios de Archivos

--- a/01-manual-jquery/01-introduccion-jquery/02-demos-muy-simples/02-demo2.html
+++ b/01-manual-jquery/01-introduccion-jquery/02-demos-muy-simples/02-demo2.html
@@ -1,6 +1,7 @@
 <!--  --------------------------------------------------  -->
 <!--  ----------  /jquery-desarrolloweb.com/  ----------  -->
 <!--  ----------  /01-manual-jquery/  ------------------  -->
+<!--  ----------  /01-introduccion-jquery/  ------------  -->
 <!--  ----------  /02-demos-muy-simples/  --------------  -->
 <!--  ----------  /02-demo2.html  ----------------------  -->
 <!--  --------------------------------------------------  -->
@@ -13,7 +14,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
     <title> 2 - Demo ocultar y mostrar un elemento con jQuery </title>
 </head>
 
