--- a/01-manual-jquery/01-introduccion-jquery/03-cuando-usar-jquery/06-acceso-api.html
+++ b/01-manual-jquery/01-introduccion-jquery/03-cuando-usar-jquery/06-acceso-api.html
@@ -1,9 +1,10 @@
-<!--  --------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  ----------  -->
-<!--  ----------  /01-manual-jquery/  ------------------  -->
-<!--  ----------  /03-cuando-usar-jquery/  -------------  -->
-<!--  ----------  /06-acceso-api.html  -----------------  -->
-<!--  --------------------------------------------------  -->
+<!--  ----------------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  ------------------  -->
+<!--  ----------      /01-manual-jquery/  ----------------------  -->
+<!--  ----------          /01-introduccion-jquery/  ------------  -->
+<!--  ----------              /03-cuando-usar-jquery/  ----------  -->
+<!--  ----------                  /06-acceso-api.html  ----------  -->
+<!--  -----------------------------------------------------------  -->
 
 
 <!DOCTYPE html>
@@ -12,7 +13,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
     <title> 6 - Acceso a API </title>
 </head>
 
