--- a/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/04-pasos-para-utilizar-jquery-en-tu-web/09-primeros-pasos-jquery.html
+++ b/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/04-pasos-para-utilizar-jquery-en-tu-web/09-primeros-pasos-jquery.html
@@ -1,9 +1,10 @@
-<!--  ------------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  --------------  -->
-<!--  ----------  /01-manual-jquery/  ----------------------  -->
-<!--  ----------  /04-primeros-pasos-jquery/  --------------  -->
-<!--  ----------  /09-primeros-pasos-jquery.html  ----------  -->
-<!--  ------------------------------------------------------  -->
+<!--  -------------------------------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  ---------------------------------  -->
+<!--  ----------      /01-manual-jquery/  -------------------------------------  -->
+<!--  ----------         /02-primeros-pasos-jquery-por-la-practica/  ----------  -->
+<!--  ----------             /04-primeros-pasos-jquery/  ----------------------  -->
+<!--  ----------                 /09-primeros-pasos-jquery.html  --------------  -->
+<!--  -------------------------------------------------------------------------  -->
 
 
 <!DOCTYPE html>
@@ -13,7 +14,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
     <title> 9 - Primeros pasos con jQuery </title>
 </head>
 
@@ -22,7 +23,7 @@
         <a href="https://www.desarrolloweb.com"> Ir a DesarrolloWeb.com </a>
     </p>
 
-    <script src="../assets/jquery/core/jquery-3.7.1.min.js"> </script>
+    <script src="../../assets/jquery/core/jquery-3.7.1.min.js"> </script>
     
     <script>
         
