--- a/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/07-efectos-rapidos/12-efectos-rapidos.html
+++ b/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/07-efectos-rapidos/12-efectos-rapidos.html
@@ -1,9 +1,10 @@
-<!--  --------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  ----------  -->
-<!--  ----------  /01-manual-jquery/  ------------------  -->
-<!--  ----------  /07-efectos-rapidos/  ----------------  -->
-<!--  ----------  /12-efectos-rapidos.html  ------------  -->
-<!--  --------------------------------------------------  -->
+<!--  --------------------------------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  ----------------------------------  -->
+<!--  ----------      /01-manual-jquery/  --------------------------------------  -->
+<!--  ----------          /02-primeros-pasos-jquery-por-la-practica/  ----------  -->
+<!--  ----------              /07-efectos-rapidos/  ----------------------------  -->
+<!--  ----------                  /12-efectos-rapidos.html  --------------------  -->
+<!--  --------------------------------------------------------------------------  -->
 
 
 <!DOCTYPE html>
@@ -13,7 +14,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
     <title> 12 - Efectos rápidos con jQuery </title>
     <style>
         
@@ -53,7 +54,7 @@
         <a href="#" id="slidedown"> Slide Down </a>
     </p>
 
-    <script src="../assets/jquery/core/jquery-3.7.1.min.js"> </script>
+    <script src="../../assets/jquery/core/jquery-3.7.1.min.js"> </script>
 
     <script>
     
