--- a/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/09-uso-ajax-sencillo-con-jquery/contenido-ajax.html
+++ b/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/09-uso-ajax-sencillo-con-jquery/contenido-ajax.html
@@ -1,9 +1,10 @@
-<!--  ---------------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  -----------------  -->
-<!--  ----------  /01-manual-jquery/  -------------------------  -->
-<!--  ----------  /09-uso-ajax-sencillo-con-jquery/  ----------  -->
-<!--  ----------  /contenido-ajax.html  -----------------------  -->
-<!--  ---------------------------------------------------------  -->
+<!--  --------------------------------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  ----------------------------------  -->
+<!--  ----------      /01-manual-jquery/  --------------------------------------  -->
+<!--  ----------          /02-primeros-pasos-jquery-por-la-practica/  ----------  -->
+<!--  ----------              /09-uso-ajax-sencillo-con-jquery/  ---------------  -->
+<!--  ----------                  /contenido-ajax.html  ------------------------  -->
+<!--  --------------------------------------------------------------------------  -->
 
 
 <h1> Contenido del Archivo Ajax </h1>
