--- a/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/10-ajax-jquery-con-mensaje-de-carga/15-ajax-jquery-mensaje-carga.html
+++ b/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/10-ajax-jquery-con-mensaje-de-carga/15-ajax-jquery-mensaje-carga.html
@@ -1,9 +1,10 @@
-<!--  -------------------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  ---------------------  -->
-<!--  ----------  /01-manual-jquery/  -----------------------------  -->
-<!--  ----------  /10-ajax-jquery-con-mensaje-de-carga/  ----------  -->
-<!--  ----------  /15-ajax-jquery-mensaje-carga.html  -------------  -->
-<!--  -------------------------------------------------------------  -->
+<!--  --------------------------------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  ----------------------------------  -->
+<!--  ----------      /01-manual-jquery/  --------------------------------------  -->
+<!--  ----------          /02-primeros-pasos-jquery-por-la-practica/  ----------  -->
+<!--  ----------              /10-ajax-jquery-con-mensaje-de-carga/  -----------  -->
+<!--  ----------                  /15-ajax-jquery-mensaje-carga.html  ----------  -->
+<!--  --------------------------------------------------------------------------  -->
 
 
 <!DOCTYPE html>
@@ -13,7 +14,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
     <title> 15 - Ajax sencillo con mensaje de carga en jQuery </title>
 </head>
 
@@ -23,7 +24,7 @@
     <div id="cargando" style="display:none; color: green;"> Cargando... </div>
     <div id="destino"> </div>
 
-    <script src="../assets/jquery/core/jquery-3.7.1.min.js"> </script>
+    <script src="../../assets/jquery/core/jquery-3.7.1.min.js"> </script>
 
     <script>
         
