--- a/01-manual-jquery/01-introduccion-jquery/03-cuando-usar-jquery/07-recuperar-mostrar-datos-javascript.html
+++ b/01-manual-jquery/01-introduccion-jquery/03-cuando-usar-jquery/07-recuperar-mostrar-datos-javascript.html
@@ -1,9 +1,10 @@
-<!--  -------------------------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  ---------------------------  -->
-<!--  ----------  /01-manual-jquery/  -----------------------------------  -->
-<!--  ----------  /03-cuando-usar-jquery/  ------------------------------  -->
-<!--  ----------  /07-recuperar-mostrar-datos-javascript.html  ----------  -->
-<!--  -------------------------------------------------------------------  -->
+<!--  -----------------------------------------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  -------------------------------------------  -->
+<!--  ----------      /01-manual-jquery/  -----------------------------------------------  -->
+<!--  ----------          /01-introduccion-jquery/  -------------------------------------  -->
+<!--  ----------              /03-cuando-usar-jquery/  ----------------------------------  -->
+<!--  ----------                  /07-recuperar-mostrar-datos-javascript.html  ----------  -->
+<!--  -----------------------------------------------------------------------------------  -->
 
 
 <!DOCTYPE html>
@@ -12,7 +13,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
     <title> 7 - Recuperar datos y mostrarlos - JS </title>
     
     <style>
