--- a/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/06-mostrar-ocultar-elementos/11-mostrar-ocultar-elementos.html
+++ b/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/06-mostrar-ocultar-elementos/11-mostrar-ocultar-elementos.html
@@ -1,9 +1,10 @@
-<!--  ----------------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  ------------------  -->
-<!--  ----------  /01-manual-jquery/  --------------------------  -->
-<!--  ----------  /06-mostrar-ocultar-elementos/  --------------  -->
-<!--  ----------  /11-mostrar-ocultar-elementos.html  ----------  -->
-<!--  ----------------------------------------------------------  -->
+<!--  --------------------------------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  ----------------------------------  -->
+<!--  ----------      /01-manual-jquery/  --------------------------------------  -->
+<!--  ----------          /02-primeros-pasos-jquery-por-la-practica/  ----------  -->
+<!--  ----------              /06-mostrar-ocultar-elementos/  ------------------  -->
+<!--  ----------                  /11-mostrar-ocultar-elementos.html  ----------  -->
+<!--  --------------------------------------------------------------------------  -->
 
 
 <!DOCTYPE html>
@@ -13,7 +14,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
     <title> 11 - Mostrar y Ocultar elementos de una página </title>
 </head>
 
@@ -32,7 +33,7 @@
         </div>
     </form>
 
-    <script src="../assets/jquery/core/jquery-3.7.1.min.js"> </script>
+    <script src="../../assets/jquery/core/jquery-3.7.1.min.js"> </script>
 
     <script>
 
