--- a/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/08-callback-de-funciones-jquery/13-callback-de-funciones-jquery.html
+++ b/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/08-callback-de-funciones-jquery/13-callback-de-funciones-jquery.html
@@ -1,9 +1,10 @@
-<!--  -------------------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  ---------------------  -->
-<!--  ----------  /01-manual-jquery/  -----------------------------  -->
-<!--  ----------  /08-callback-de-funciones-jquery/  --------------  -->
-<!--  ----------  /13-callback-de-funciones-jquery.html  ----------  -->
-<!--  -------------------------------------------------------------  -->
+<!--  ----------------------------------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  ------------------------------------  -->
+<!--  ----------      /01-manual-jquery/  ----------------------------------------  -->
+<!--  ----------          /02-primeros-pasos-jquery-por-la-practica/  ------------  -->
+<!--  ----------              /08-callback-de-funciones-jquery/  -----------------  -->
+<!--  ----------                  /13-callback-de-funciones-jquery.html  ----------  -->
+<!--  -----------------------------------------------------------------------------  -->
 
 
 <!DOCTYPE html>
@@ -13,7 +14,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
     <title> 13 - Callback de funciones jQuery </title>
 
     <style>
@@ -58,7 +59,7 @@
         <button id="callback"> Procesar efectos con callback </button>
     </p>
 
-    <script src="../assets/jquery/core/jquery-3.7.1.min.js"> </script>
+    <script src="../../assets/jquery/core/jquery-3.7.1.min.js"> </script>
 
     <script>
         
