--- a/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/09-uso-ajax-sencillo-con-jquery/14-uso-ajax-sencillo.html
+++ b/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/09-uso-ajax-sencillo-con-jquery/14-uso-ajax-sencillo.html
@@ -1,9 +1,10 @@
-<!--  ---------------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  -----------------  -->
-<!--  ----------  /01-manual-jquery/  -------------------------  -->
-<!--  ----------  /09-uso-ajax-sencillo-con-jquery/  ----------  -->
-<!--  ----------  /14-uso-ajax-sencillo.html  -----------------  -->
-<!--  ---------------------------------------------------------  -->
+<!--  --------------------------------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  ----------------------------------  -->
+<!--  ----------      /01-manual-jquery/  --------------------------------------  -->
+<!--  ----------          /02-primeros-pasos-jquery-por-la-practica/  ----------  -->
+<!--  ----------              /09-uso-ajax-sencillo-con-jquery/  ---------------  -->
+<!--  ----------                  /14-uso-ajax-sencillo.html  -----------------  -->
+<!--  -------------------------------------------------------------------------  -->
 
 
 <!DOCTYPE html>
@@ -13,7 +14,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
     <title> 14 - Ajax tremendamente sencillo con jQuery </title>
 </head>
 
@@ -27,7 +28,7 @@
     <div id="destinoAjax"> </div>
     <div id="destinoAjaxPHP"> </div>
 
-    <script src="../assets/jquery/core/jquery-3.7.1.min.js"> </script>
+    <script src="../../assets/jquery/core/jquery-3.7.1.min.js"> </script>
 
     <script>
 
