Change - Más Comentarios de Archivos

--- a/01-manual-jquery/01-introduccion-jquery/02-demos-muy-simples/01-demo1.html
+++ b/01-manual-jquery/01-introduccion-jquery/02-demos-muy-simples/01-demo1.html
@@ -1,10 +1,10 @@
-<!--  --------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  ----------  -->
-<!--  ----------  /01-manual-jquery/  ------------------  -->
-<!--  ----------  /01-introduccion-jquery/  ------------  -->
-<!--  ----------  /02-demos-muy-simples/  --------------  -->
-<!--  ----------  /01-demo1.html  ----------------------  -->
-<!--  --------------------------------------------------  -->
+<!--  ----------------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  ------------------  -->
+<!--  ----------      /01-manual-jquery/  ----------------------  -->
+<!--  ----------          /01-introduccion-jquery/  ------------  -->
+<!--  ----------              /02-demos-muy-simples/  ----------  -->
+<!--  ----------                  /01-demo1.html  --------------  -->
+<!--  ----------------------------------------------------------  -->
 
 
 <!DOCTYPE html>
