--- a/01-manual-jquery/03-carga-de-jquery-desde-un-cdn/12-jquery-carga-combinada-cdn-local/17-jquery-carga-combinada-con-modernizr.html
+++ b/01-manual-jquery/03-carga-de-jquery-desde-un-cdn/12-jquery-carga-combinada-cdn-local/17-jquery-carga-combinada-con-modernizr.html
@@ -1,9 +1,10 @@
-<!--  ---------------------------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  -----------------------------  -->
-<!--  ----------  /01-manual-jquery/  -------------------------------------  -->
-<!--  ----------  /12-jquery-carga-combinada-cdn-local/  ------------------  -->
-<!--  ----------  /16-jquery-carga-combinada-con-modernizr.html  ----------  -->
-<!--  ---------------------------------------------------------------------  -->
+<!--  -------------------------------------------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  ---------------------------------------------  -->
+<!--  ----------      /01-manual-jquery/  -------------------------------------------------  -->
+<!--  ----------          /03-carga-de-jquery-desde-un-cdn/  ------------------------------  -->
+<!--  ----------              /12-jquery-carga-combinada-cdn-local/  ----------------------  -->
+<!--  ----------                  /16-jquery-carga-combinada-con-modernizr.html  ----------  -->
+<!--  -------------------------------------------------------------------------------------  -->
 
 
 <!DOCTYPE html>
