--- a/01-manual-jquery/04-nucleo-de-jquery/17-metodo-size-propiedad-length/24-metodo-size-propiedad-length.html
+++ b/01-manual-jquery/04-nucleo-de-jquery/17-metodo-size-propiedad-length/24-metodo-size-propiedad-length.html
@@ -1,9 +1,10 @@
-<!--  -------------------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  ---------------------  -->
-<!--  ----------  /01-manual-jquery/  -----------------------------  -->
-<!--  ----------  /17-metodo-size-propiedad-length/  --------------  -->
-<!--  ----------  /22-metodo-size-propiedad-length.html  ----------  -->
-<!--  -------------------------------------------------------------  -->
+<!--  -----------------------------------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  -------------------------------------  -->
+<!--  ----------      /01-manual-jquery/  -----------------------------------------  -->
+<!--  ----------          /04-nucleo-de-jquery/  ----------------------------------  -->
+<!--  ----------              /17-metodo-size-propiedad-length/  ------------------  -->
+<!--  ----------                  /22-metodo-size-propiedad-length.html  ----------  -->
+<!--  -----------------------------------------------------------------------------  -->
 
 
 <!DOCTYPE html>
@@ -13,7 +14,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
     <title> 24 - Método size() y propiedad length </title>
 </head>
 
@@ -31,7 +32,7 @@
     </script>
 
     <script>
-        window.jQuery || document.write('<script src="../assets/jquery/core/jquery-3.7.1.min.js">\x3C/script>')
+        window.jQuery || document.write('<script src="../../assets/jquery/core/jquery-3.7.1.min.js">\x3C/script>')
     </script>
 
     <script>
