--- a/01-manual-jquery/04-nucleo-de-jquery/18-data-y-removedata-ejemplo-1/27-data-remove-data-ejemplo-3.html
+++ b/01-manual-jquery/04-nucleo-de-jquery/18-data-y-removedata-ejemplo-1/27-data-remove-data-ejemplo-3.html
@@ -1,9 +1,10 @@
-<!--  ------------------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  --------------------  -->
-<!--  ----------  /01-manual-jquery/  ----------------------------  -->
-<!--  ----------  /18-data-y-removedata/  ------------------------  -->
-<!--  ----------  /27-data-y-removedata-ejemplo-3.html  ----------  -->
-<!--  ------------------------------------------------------------  -->
+<!--  ----------------------------------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  ------------------------------------  -->
+<!--  ----------      /01-manual-jquery/  ----------------------------------------  -->
+<!--  ----------          /04-nucleo-de-jquery/  ---------------------------------  -->
+<!--  ----------              /18-data-y-removedata/  ----------------------------  -->
+<!--  ----------                  /27-data-y-removedata-ejemplo-3.html  ----------  -->
+<!--  ----------------------------------------------------------------------------  -->
 
 
 <!DOCTYPE html>
@@ -13,7 +14,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
     <title> 27 - Ejemplos de uso de la función data() y removeData() del core de jQuery </title>
 </head>
 
@@ -57,7 +58,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
     <script>
-        window.jQuery || document.write('<script src="../assets/jquery/core/jquery-3.7.1.min.js">\x3C/script>')
+        window.jQuery || document.write('<script src="../../assets/jquery/core/jquery-3.7.1.min.js">\x3C/script>')
     </script>
 
     <script>
