Add - 02-manipular-dom-y-trabajar-con-ajax - 01 y 02 - manipular-dom.html - Videotutoriales.

--- a/02-videotutoriales-jquery/06-core-de-jquery/01-core-jquery-video-1.html
+++ b/02-videotutoriales-jquery/06-core-de-jquery/01-core-jquery-video-1.html
@@ -1,9 +1,9 @@
-<!--  ---------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  -----------  -->
-<!--  ----------  /02-videotutoriales-jquery/  ----------  -->
-<!--  ----------  /06-core-de-jquery-video-1/  ----------  -->
-<!--  ----------  /index.html  --------------------------  -->
-<!--  ---------------------------------------------------  -->
+<!--  ----------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  ------------  -->
+<!--  ----------  /02-videotutoriales-jquery/  -----------  -->
+<!--  ----------  /06-core-de-jquery  --------------------  -->
+<!--  ----------  /01-core-jquery-video-1.html  ----------  -->
+<!--  ----------------------------------------------------  -->
 
 
 <!DOCTYPE html>
