--- a/02-videotutoriales-jquery/06-core-de-jquery/02-core-jquery-video-2.html
+++ b/02-videotutoriales-jquery/06-core-de-jquery/02-core-jquery-video-2.html
@@ -1,9 +1,9 @@
-<!--  ---------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  -----------  -->
-<!--  ----------  /02-videotutoriales-jquery/  ----------  -->
-<!--  ----------  /06-core-de-jquery-video-2/  ----------  -->
-<!--  ----------  /index.html  --------------------------  -->
-<!--  ---------------------------------------------------  -->
+<!--  ----------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  ------------  -->
+<!--  ----------  /02-videotutoriales-jquery/  -----------  -->
+<!--  ----------  /06-core-de-jquery  --------------------  -->
+<!--  ----------  /02-core-jquery-video-2.html  ----------  -->
+<!--  ----------------------------------------------------  -->
 
 
 <!DOCTYPE html>
