Add - 11 - Métodos de Attributes en jQuery - Videotutoriales.

--- a/02-videotutoriales-jquery/10-ajax-mensaje-carga/index.html
+++ b/02-videotutoriales-jquery/10-ajax-mensaje-carga/index.html
@@ -2,7 +2,7 @@
 <!--  ----------  /jquery-desarrolloweb.com/  -----------  -->
 <!--  ----------  /02-videotutoriales-jquery/  ----------  -->
 <!--  ----------  /10-ajax-mensaje-caga  ----------------  -->
-<!--  ----------  /index  -------------------------------  -->
+<!--  ----------  /index.html  --------------------------  -->
 <!--  ---------------------------------------------------  -->
 
 
