Add - Video 14 Offset y otros metodos CSS de jQuery

--- a/02-videotutoriales-jquery/13-metodos-css-de-jquery/01-metodos-css-1.html
+++ b/02-videotutoriales-jquery/13-metodos-css-de-jquery/01-metodos-css-1.html
@@ -2,7 +2,7 @@
 <!--  ----------  /jquery-desarrolloweb.com/  -----------  -->
 <!--  ----------  /02-videotutoriales-jquery/  ----------  -->
 <!--  ----------  /13-metodos-css-de-jquery/  -----------  -->
-<!--  ----------  /01-metodos-css.html  -----------------  -->
+<!--  ----------  /01-metodos-css-1.html  ---------------  -->
 <!--  ---------------------------------------------------  -->
 
 
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
-    <title> 13 - Métodos CSS de jQuery - Videotutoriales </title>
+    <title> 13 - Métodos CSS 1 de jQuery - Videotutoriales </title>
 
     <script 
         src="https://code.jquery.com/jquery-1.4.2.min.js"
@@ -39,7 +39,7 @@
 <body>
 
     <hr>
-    <h1> Metodos CSS de jQuery </h1>
+    <h1> Metodos CSS de jQuery Parte 1 </h1>
     <hr>
 
     <div id="miCapa1" style="color: red;"> hola! </div> <br><br>
