--- a/02-videotutoriales-jquery/13-metodos-css-de-jquery/02-metodos-css-2.html
+++ b/02-videotutoriales-jquery/13-metodos-css-de-jquery/02-metodos-css-2.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
-    <title> 13 - Métodos CSS de jQuery 2 - Videotutoriales </title>
+    <title> 13 - Métodos CSS de jQuery parte 2 - Videotutoriales </title>
 
     <script 
         src="https://code.jquery.com/jquery-1.4.2.min.js"
@@ -31,8 +31,6 @@
             text-align: center;
         }
 
-       
-
     </style>
 
 </head>
@@ -41,7 +39,7 @@
 <body>
 
     <hr>
-    <h1> Metodos CSS de jQuery </h1>
+    <h1> Metodos CSS de jQuery parte 2 </h1>
     <hr>
 
     <div> hola 1! </div> <br><br>
