Add - 27 - Eventos en jQuery - Manuales

--- a/01-manual-jquery/07-metodos-de-css-de-jquery/26-funciones-css-de-jquery-para-conocer-tamaño-y-posicion-de-elementos/37-funciones-de-css-en-jquery.html
+++ b/01-manual-jquery/07-metodos-de-css-de-jquery/26-funciones-css-de-jquery-para-conocer-tamaño-y-posicion-de-elementos/37-funciones-de-css-en-jquery.html
@@ -1,10 +1,10 @@
-<!--  -----------------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  -------------------  -->
-<!--  ----------  /01-manual-jquery/  ---------------------------  -->
-<!--  ----------  /07-metodos-de-css-de-jquery/  ----------------  -->
-<!--  ----------  /25-metodos-de-css-de-jquery/  ----------------  -->
-<!--  ----------  /37-funciones-de-css-en-jquery.html  ----------  -->
-<!--  -----------------------------------------------------------  -->
+<!--  -------------------------------------------------------------------------  -->
+<!--  ----------  /jquery-desarrolloweb.com/  ---------------------------------  -->
+<!--  ----------  /01-manual-jquery/  -----------------------------------------  -->
+<!--  ----------  /07-metodos-de-css-de-jquery/  ------------------------------  -->
+<!--  ----------  /26-funciones-css-para-tamaño-posicion-elementos/  ----------  -->
+<!--  ----------  /37-funciones-de-css-en-jquery.html  ------------------------  -->
+<!--  -------------------------------------------------------------------------  -->
 
 
 <!DOCTYPE html>
