Add - 33 Definir  eventos con bind() y eliminar con unbind()

--- a/01-manual-jquery/08-eventos-en-jquery/31-eventos-teclado-en-jquery/43-eventos-teclado-2.html
+++ b/01-manual-jquery/08-eventos-en-jquery/31-eventos-teclado-en-jquery/43-eventos-teclado-2.html
@@ -2,7 +2,7 @@
 <!--  ----------  /jquery-desarrolloweb.com/  --------------  -->
 <!--  ----------  /01-manual-jquery/  ----------------------  -->
 <!--  ----------  /08-eventos-en-jquery/  ------------------  -->
-<!--  ----------  /31-eventos-de-teclado-jquery/  ----------  -->
+<!--  ----------  /31-eventos-teclado-en-jquery/  ----------  -->
 <!--  ----------  /43-eventos-teclado-2.html  --------------  -->
 <!--  ------------------------------------------------------ -->
 
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../../assets/favicon/jquery-favicon-original.ico" type="image/x-icon">
-    <title> 43 - Eventos Teclado 2 de jQuery </title>
+    <title> 43 - Eventos de Teclado 2 de jQuery </title>
 
     <script src="https://code.jquery.com/jquery-1.4.1.min.js"
         integrity="sha256-LOx49zn73f7YUs15NNJTDnzEyPFLOGc7A7pfuICtTMc=" crossorigin="anonymous"> </script>
