--- a/01-manual-jquery/04-nucleo-de-jquery/14-funcion-jquery-o-funcion-$/18-funcion-jquery.html
+++ b/01-manual-jquery/04-nucleo-de-jquery/14-funcion-jquery-o-funcion-$/18-funcion-jquery.html
@@ -36,7 +36,7 @@
     <div id="elem1"> Este elemento se llama elem1 </div>
     <div id="elem2"> Este otro elemento se llama elem2 </div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js----"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
     <script>
         window.jQuery || document.write('<script src="../../assets/jquery/core/jquery-3.7.1.min.js">\x3C/script>')
