Add - 9 Clase Experimental 2 - Formularios y AJAX - jQuery IO

--- a/06-jquery-io/08-clase-1-experimental-eventos-efectos/01-intro.html
+++ b/06-jquery-io/08-clase-1-experimental-eventos-efectos/01-intro.html
@@ -1,6 +1,6 @@
 <!--  -----------------------------------------------------------------  -->
 <!--  ----------  /jquery-desarrolloweb.com/  -------------------------  -->
-<!--  ----------  /02-videotutoriales-jquery/  ------------------------  -->
+<!--  ----------  /06-jquery-io/  -------------------------------------  -->
 <!--  ----------  /08-clase-1-experimental-eventos-efectos/  ----------  -->
 <!--  ----------  /01-intro.html  -------------------------------------  -->
 <!--  -----------------------------------------------------------------  -->
