--- a/06-jquery-io/08-clase-1-experimental-eventos-efectos/03-eventos.html
+++ b/06-jquery-io/08-clase-1-experimental-eventos-efectos/03-eventos.html
@@ -1,7 +1,7 @@
 <!--  -----------------------------------------------------------------  -->
 <!--  ----------  /jquery-desarrolloweb.com/  -------------------------  -->
-<!--  ----------  /02-videotutoriales-jquery/  ------------------------  -->
-<!--  ----------  /03-clase-1-experimental-eventos-efectos/  ----------  -->
+<!--  ----------  /06-jquery-io/  -------------------------------------  -->
+<!--  ----------  /08-clase-1-experimental-eventos-efectos/  ----------  -->
 <!--  ----------  /03-eventos.html  -----------------------------------  -->
 <!--  -----------------------------------------------------------------  -->
 
