Refactorización - Html, Styles y Script - 1.Introducción jQuery - 3. Cuando usar jQuery

--- a/01-manual-jquery/01-introduccion-jquery/02-demos-muy-simples/02-demo2/index.html
+++ b/01-manual-jquery/01-introduccion-jquery/02-demos-muy-simples/02-demo2/index.html
@@ -34,9 +34,9 @@
     <div class="layout">
 
         <header class="layout__header">
-            <img class="header__logo-jquery" src="/06-jquery-desarrolloweb.com/01-manual-jquery/src/favicon/jquery-favicon-original.ico" alt="Logo jQuery">
+            <img class="header__logo-jquery" src="/06-jquery-desarrolloweb.com/01-manual-jquery/src/img/logo-jquery/jquery-logo-ico-original.ico" alt="Logo jQuery">
             <h1 class="header__title"> Demo 2 - Mostrar un elemento con jQuery </h1>
-            <img class="header__logo-jquery" src="/06-jquery-desarrolloweb.com/01-manual-jquery/src/favicon/jquery-favicon-original.ico" alt="Logo jQuery">
+            <img class="header__logo-jquery" src="/06-jquery-desarrolloweb.com/01-manual-jquery/src/img/logo-jquery-ui/jquery-ui-icon.svg" alt="Logo jQuery">
         </header>
 
         <main class="layout__main">
