Refactorización - Html, Styles y Script - 1. Manual de jQuery - 2. Primeros pasos jQuery por la practica

--- a/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/06-uso-ajax-sencillo-con-jquery/contenido-ajax.html
+++ b/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/06-uso-ajax-sencillo-con-jquery/contenido-ajax.html
@@ -1,13 +1,16 @@
-<!--  --------------------------------------------------------------------------  -->
-<!--  ----------  /jquery-desarrolloweb.com/  ----------------------------------  -->
-<!--  ----------      /01-manual-jquery/  --------------------------------------  -->
-<!--  ----------          /02-primeros-pasos-jquery-por-la-practica/  ----------  -->
-<!--  ----------              /09-uso-ajax-sencillo-con-jquery/  ---------------  -->
-<!--  ----------                  /contenido-ajax.html  ------------------------  -->
-<!--  --------------------------------------------------------------------------  -->
+<!--
+    ------------------------------------------------------------------
+    ----------  /06-jquery-desarrolloweb.com/  -----------------------
+    ----------  /01-manual-jquery/  ----------------------------------
+    ----------  /02-primeros-pasos-jquery-por-la-practica/  ----------
+    ----------  /06-uso-ajax-sencillo-con-jquery/  -------------------
+    ----------  /contenido-ajax.html  --------------------------------
+    ------------------------------------------------------------------
+-->
 
 
-<h1> Contenido del Archivo Ajax </h1>
+
+<h2> Contenido del Archivo Ajax </h2>
 
 <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
