Refactorización - Html, Styles y Script - 1. Manual de jQuery - 2. Primeros pasos jQuery por la practica

--- a/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/05-callback-de-funciones-jquery/index.html
+++ b/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/05-callback-de-funciones-jquery/index.html
@@ -17,7 +17,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/06-jquery-desarrolloweb.com/01-manual-jquery/src/favicon/jquery-favicon-original.ico" type="image/x-icon">
-    <title> 5. Callbacks en funciones de jQuery - 1. Manual jQuery </title>
+    <title> Callbacks en funciones de jQuery - Manual jQuery </title>
 
     <link rel="stylesheet" href="/06-jquery-desarrolloweb.com/01-manual-jquery/src/styles/reset.css">
     <link rel="stylesheet" href="/06-jquery-desarrolloweb.com/01-manual-jquery/src/styles/layout.css">
@@ -35,7 +35,9 @@
         <header class="layout__header">
             <img class="header__logo-jquery" src="/06-jquery-desarrolloweb.com/01-manual-jquery/src/favicon/jquery-favicon-original.ico" alt="Logo jQuery">
             <h1 class="header__title"> 
-                5. Callbacks en funciones de jQuery
+                2. Primeros pasos jQuery por la práctica
+                <br>
+                Callbacks en funciones de jQuery
             </h1>
             <img class="header__logo-jquery" src="/06-jquery-desarrolloweb.com/01-manual-jquery/src/favicon/jquery-favicon-original.ico" alt="Logo jQuery">
         </header>
