--- a/01-manual-jquery/src/services/02-primeros-pasos-jquery-por-la-practica/contenido-ajax.html
+++ b/01-manual-jquery/src/services/02-primeros-pasos-jquery-por-la-practica/contenido-ajax.html
@@ -2,8 +2,8 @@
     ------------------------------------------------------------------
     ----------  /06-jquery-desarrolloweb.com/  -----------------------
     ----------  /01-manual-jquery/  ----------------------------------
+    ----------  /src/services/  --------------------------------------
     ----------  /02-primeros-pasos-jquery-por-la-practica/  ----------
-    ----------  /06-uso-ajax-sencillo-con-jquery/  -------------------
     ----------  /contenido-ajax.html  --------------------------------
     ------------------------------------------------------------------
 -->
@@ -12,12 +12,7 @@
 
 <h2> Contenido del Archivo Ajax </h2>
 
-<p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Perferendis delectus, consequuntur a dolore placeat, 
-    autem quo facere fugit recusandae accusamus error. 
-    Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
-</p>
+<br>
 
 <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -26,12 +21,7 @@
     Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
 </p>
 
-<p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Perferendis delectus, consequuntur a dolore placeat, 
-    autem quo facere fugit recusandae accusamus error. 
-    Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
-</p>
+<br>
 
 <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -39,6 +29,26 @@
     autem quo facere fugit recusandae accusamus error. 
     Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
 </p>
+
+<br>
+
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    Perferendis delectus, consequuntur a dolore placeat, 
+    autem quo facere fugit recusandae accusamus error. 
+    Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
+</p>
+
+<br>
+
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    Perferendis delectus, consequuntur a dolore placeat, 
+    autem quo facere fugit recusandae accusamus error. 
+    Aperiam, mollitia vitae natus debitis similique aliquam eius sapiente.
+</p>
+
+<br>
 
 <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
