--- a/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/07-ajax-jquery-con-mensaje-de-carga/index.html
+++ b/01-manual-jquery/02-primeros-pasos-jquery-por-la-practica/07-ajax-jquery-con-mensaje-de-carga/index.html
@@ -17,7 +17,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/06-jquery-desarrolloweb.com/01-manual-jquery/src/favicon/jquery-favicon-original.ico" type="image/x-icon">
-    <title> 7. AJAX con jQuery mensaje de carga - 1. Manual jQuery </title>
+    <title> AJAX con jQuery mensaje de carga - Manual jQuery </title>
 
     <link rel="stylesheet" href="/06-jquery-desarrolloweb.com/01-manual-jquery/src/styles/reset.css">
     <link rel="stylesheet" href="/06-jquery-desarrolloweb.com/01-manual-jquery/src/styles/layout.css">
@@ -35,7 +35,9 @@
         <header class="layout__header">
             <img class="header__logo-jquery" src="/06-jquery-desarrolloweb.com/01-manual-jquery/src/favicon/jquery-favicon-original.ico" alt="Logo jQuery">
             <h1 class="header__title"> 
-                7. AJAX con jQuery mensaje de carga
+                2. Primeros pasos jQuery por la práctica
+                <br>
+                AJAX con jQuery mensaje de carga
             </h1>
             <img class="header__logo-jquery" src="/06-jquery-desarrolloweb.com/01-manual-jquery/src/favicon/jquery-favicon-original.ico" alt="Logo jQuery">
         </header>
